07-alb-ingress-failure/manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: web-app

  template:
    metadata:
      labels:
        app: web-app

    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
