07-alb-ingress-failure/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app

spec:
  selector:
    app: web-app

  ports:
  - port: 80
    targetPort: 80
